--- a/android-developer.html
+++ b/android-developer.html
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698346128-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698346128-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -130,7 +130,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Vietnam Vietnam  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
       Android Developer - Supermercato24
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -148,7 +148,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.jobsaddaa.com/jobs/senior-android-developer-job-in-gm-global-products-sales-pvt-ltd-hiring-for-hiring-for-gm-global-products-sales-pvt-ltd/'>Senior Android Developer Job in GM Global Products &amp; Sales Pvt. Ltd Hiring For Hiring for GM Global Products &amp; Sales Pvt. Ltd | JobsAddaa.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.jobsaddaa.com/jobs/senior-android-developer-job-in-gm-global-products-sales-pvt-ltd-hiring-for-hiring-for-gm-global-products-sales-pvt-ltd/'>Senior Android Developer Job in GM Global Products &amp; Sales Pvt. Ltd Hiring For Hiring for GM Global Products &amp; Sales Pvt. Ltd | JobsAddaa.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -205,7 +205,7 @@ with a passion for creating innovative digital experiences, to help us launch th
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://cartrack.teamtailor.com/jobs/249718-android-developer'>Android Developer - Cartrack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cartrack.teamtailor.com/jobs/249718-android-developer'>Android Developer - Cartrack</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 9, 2019 ... Job Description. We are looking for an Android developer responsible for the 
 development and maintenance of applications aimed at the public as well as?...</p>
@@ -248,7 +248,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/beetalents/fd5e3fde-24a6-4a7a-a2a9-c629ea3f8f6d'>Bee Talents - Android Developer - Kangaroo [do $5500 netto B2B]</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/fd5e3fde-24a6-4a7a-a2a9-c629ea3f8f6d'>Bee Talents - Android Developer - Kangaroo [do $5500 netto B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -268,7 +268,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Canada London</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -369,7 +369,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://www.hiretale.com/jobs/view/14944/FieldAssist-Sr-Android-Developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hiretale.com/jobs/view/14944/FieldAssist-Sr-Android-Developer'>
         FieldAssist - Sr Android Developer (3-6 yrs), Gurgaon, OOPs,MVP,MVVM,Android,Kotlin,Mobile App Development, (Mobile App Development jobs) - hiretale.com    </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
@@ -500,7 +500,7 @@ Remote Android Developer at komoot | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
