Junior Data Analyst | Housing Technology Recruitment - IT Jobs in Housing. Visa Business/Data Analyst - Level 4 | SmartRecruiters. Datacentre Ops Analyst - Windows/VMWare - 3 months - Lanarkshire - UK - Scotland, Strathclyde, Lanarkshire - (1029). Job Application for Data Analyst, Operations at Carvana. Job Application for Senior Data Analyst (m/f/d) at HomeToGo. Senior Data Analyst - Western Union Careers. Job Application for Data Analyst at 6sense. Align Technology Careers - Senior Data Scientist/Statistician. Benefitfocus Careers - Data Analyst II. J.C. Penney India Careers - Analyst - SAS & Statistics. Data Analyst - IntelliPro Group Inc. - Career Page. Financial Business Data Analyst - IntelliPro Group Inc. - Career Page. Sr. Business Data Analyst (Mountain View, CA) - IntelliPro Group Inc. - Career Page. Grand Rounds - Experienced Healthcare Data Analyst. Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters. Benefitfocus Careers - Data Analyst II. Lakeshore Learning Materials Data Analyst | SmartRecruiters.     Data Analyst - SEM at doxo . Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available). Data Analyst & Sales Operations - ZigZag Careers - Career Page. Junior Data Analyst - Cover - Career Page.       Technical Account Manager / Data Analyst (m/w/d) - Integrations & Reportings - Searchmetrics GmbH     . Biogen Principal Analyst, Statistical Programming | SmartRecruiters. Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers. MadKudu - Business and Data Analyst ??. Data Analyst - Louisville, KY 40206 - Indeed.com. Job @ Corecam (Singapore): Junior Data Analyst | JOIN. Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters. Job Application for Senior Data Analyst at WorkMarket. Datacom - Service Desk Analyst - Fixed Term. Datacom - Systems Analyst - Datacom AU. Job Application for Data Analyst, Revenue Growth at Asana. Biogen Statistical Programmer | SmartRecruite

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -76,7 +76,7 @@
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.abrecco.com/job/datacentre-ops-analyst-windows-vmware-3-months-bellshill-market-rates-it-support-lanarkshire-1029.htm'>Datacentre Ops Analyst - Windows/VMWare - 3 months - Lanarkshire - UK - Scotland, Strathclyde, Lanarkshire - (1029)</a></h5> 
@@ -135,7 +135,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Lakeshore/743999698338190-data-analyst'>Lakeshore Learning Materials Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lakeshore/743999698338190-data-analyst'>Lakeshore Learning Materials Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -167,7 +167,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
+<h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -179,7 +179,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://corecam.join.com/jobs/462646-junior-data-analyst'>Job @ Corecam (Singapore): Junior Data Analyst | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://corecam.join.com/jobs/462646-junior-data-analyst'>Job @ Corecam (Singapore): Junior Data Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore, Singapore  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -187,7 +187,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=cc02ebf91'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=cc02ebf91'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
 <p><span class="badge badge-light">Toronto, ON  Toronto, ON</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -244,7 +244,7 @@
 <p>1 day ago ... We are looking for a talented Data Analyst to join gov.au Observatory, to help us 
 achieve our mission to quantify user interactions with government services.</p>
 <hr/>
-<h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -300,7 +300,7 @@ wealth of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply to Data Analyst at Autodata Solutions in London, ON, Canada.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mihin.applytojob.com/apply/2CLJKJK1YH/Statistical-Analyst'>Statistical Analyst - MiHIN - Career Page</a></h5> 
+<h5><a href='https://mihin.applytojob.com/apply/2CLJKJK1YH/Statistical-Analyst'>Statistical Analyst - MiHIN - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... The Statistical Analyst is responsible for supporting MiHIN's organizational 
 reporting needs by analyzing the data and presenting the findings to the 
@@ -318,7 +318,7 @@ organization?...</p>
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mycs.join.com/jobs/461340-data-analyst-x-f-m'>Job @ MYCS (Berlin): Data Analyst (x/f/m) | JOIN</a></h5> 
+<h5><a href='https://mycs.join.com/jobs/461340-data-analyst-x-f-m'>Job @ MYCS (Berlin): Data Analyst (x/f/m) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -339,11 +339,11 @@ organization?...</p>
 <p><span class="badge badge-light">Mountain View, California United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o2JTafwy&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=njhmlMwy'>NICE Actimize Careers - Senior Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o2JTafwy&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=njhmlMwy'>NICE Actimize Careers - Senior Data Analyst</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/data-management-analyst-faculty-academic-affairs-23181'>Data Management Analyst - Faculty Academic Affairs - MD Anderson Cancer Center Careers</a></h5> 
+<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/data-management-analyst-faculty-academic-affairs-23181'>Data Management Analyst - Faculty Academic Affairs - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -426,7 +426,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/fraud-data-analyst-27450'>Fraud Data Analyst - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/fraud-data-analyst-27450'>Fraud Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -492,7 +492,7 @@ traditionally?...</p>
 Zayo by providing various analyses relating to Zayo's network and geographical
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1929443'>Job Application for Stage Data Analyst H/F at TripAdvisor</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1929443'>Job Application for Stage Data Analyst H/F at TripAdvisor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>il y a 4?jours ... Rejoignez la belle brochette de LaFourchette ! Derri?re LaFourchette, il y a une 
 ?quipe aux personnalit?s et aux talents multiples. Du commercial au geek,?...</p>
